@@ -1,3 +1,9 @@
+2006-03-11  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/2443
+	* dwarf2.c (concat_filename): Don't issue an error if file is
+	0.
+
 2006-03-10  Paul Brook  <paul@codesourcery.com>
 
 	* elf32-arm.c (INTERWORK_FLAG): Handle EABIv5.
